# dbw

./: CHANGELOG.md  README.md  docker-compose.dind.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dbw/: __init__.py  bakefile.py  cli.py  compose.py  config.py  docker_runner.py  doctor.py  errors.py  extension.py  gitops.py  log.py  repo_config.py
dbw_project/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
dbw_project/.github/workflows/: ci.yml  release.yml
dbw_project/extensions/fzf/: Dockerfile  docker-compose.fragment.yml
dbw_project/src/dbw/: __init__.py  bakefile.py  cli.py  compose.py  config.py  docker_runner.py  doctor.py  errors.py  extension.py  gitops.py  log.py  repo_config.py
dbw_project/tests/: __init__.py  conftest.py
dbw_project/tests/integration/: __init__.py  test_basic_workflow.py
dbw_project/tests/unit/: __init__.py  test_extension.py  test_gitops.py
docs/: conf.py  index.rst  intro.rst
example/: example.py
extensions/uv/: Dockerfile  docker-compose.fragment.yml
scripts/: docker-setup.sh  rename_project.sh
templates/: Dockerfile.base  docker-bake.hcl.j2  docker-compose.base.yml
test/: __init__.py  conftest.py  test_basic.py
test/integration/: __init__.py  test_basic_workflow.py
test/unit/: __init__.py  test_extension.py  test_gitops.py
test/workflows/: test_workflow_1_pwd.sh  test_workflow_2_git.sh  test_workflow_3_cmd.sh  test_workflow_4_persistent.sh  test_workflows.py
