[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbw"
version = "0.1.0"
description = "Docker Buildx/Bake Worktree - Fast dev containers with git worktree isolation and extension caching"
authors = [
    {name = "dbw contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer[all]>=0.9.0",
    "GitPython>=3.1.40",
    "ruamel.yaml>=0.17.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "docker>=6.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-docker>=2.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-requests",
    "pre-commit>=3.4.0",
]

[project.scripts]
dbw = "dbw.cli:main"

[project.urls]
Homepage = "https://github.com/blooop/dbw"
Repository = "https://github.com/blooop/dbw"
Issues = "https://github.com/blooop/dbw/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dbw"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501", "B008", "B905"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]